--- a/my-spring-pet-clinic-data/pom.xml
+++ b/my-spring-pet-clinic-data/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>my-spring-pet-clinic</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>my-spring-pet-clinic-data</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -59,9 +59,4 @@
             </plugin>
         </plugins>
     </build>
-
-
-  <scm>
-    <tag>my-spring-pet-clinic-0.0.2</tag>
-  </scm>
 </project>
