--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
     <artifactId>my-spring-pet-clinic</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <name>my-spring-pet-clinic</name>
     <description>my-spring-pet-clinic</description>
     <packaging>pom</packaging>
@@ -46,7 +46,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:BaAlexandru/my-spring-pet-clinic.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>my-spring-pet-clinic-0.0.3</tag>
   </scm>
 
 </project>
