--- a/my-spring-pet-clinic-web/pom.xml
+++ b/my-spring-pet-clinic-web/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>my-spring-pet-clinic</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>my-spring-pet-clinic-web</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -19,7 +19,7 @@
         <dependency>
             <artifactId>my-spring-pet-clinic-data</artifactId>
             <groupId>com.example</groupId>
-            <version>0.0.3</version>
+            <version>0.0.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
